--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prettier": "prettier . --write",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --config webpack.dev.js --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,8 @@
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.7",
     "prettier": "3.3.3",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
@@ -28,5 +31,9 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^6.0.1"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.{ts,css,md}": "prettier --write"
   }
 }
