--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prettier": "prettier . --write",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --config webpack.dev.js --open",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "prepare": "husky"
   },
   "keywords": [],
@@ -15,15 +16,18 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@jest/globals": "^29.7.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.4",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "prettier": "3.3.3",
     "style-loader": "^4.0.0",
+    "ts-jest": "^29.2.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0",
